# itmo-8sem-networks

./: launch-base.sh  qemu-ifdown.sh  qemu-ifup.sh  readme.md  stop-bridge.sh
anycast/: cli.xml  pom.xml
anycast-test/: compile-launch.sh  init-stub.sh  launch.sh
anycast-test/bundle/: client.sh  server.sh
anycast/src/main/java/ru/ifmo/ctd/year2012/sem8/networks/timesync/: ConsoleListener.java  Main.java  NetworkListener.java
anycast/src/main/resources/: log4j2.xml
hello-world/: init-stub.sh  launch.sh  readme.md
network-gen/: README.txt  lol.dot  network-gen.cabal
network-gen/app/: Gen.hs  Main.hs
network-gen/src/: .Scripts.hs.swp  Configs.hs  Data.hs  Draw.hs  Env.hs  EnvExample.hs  EnvGraph.hs  EnvLens.hs  Gen.hs  Graphviz.hs  IfupScript.hs  InitScript.hs  LaunchScript.hs  Output.hs  Script.hs  Scripts.hs
network-gen/templates/: ifup.sh  init-stub.sh  launch.sh
src/ru/huyak/huyak/i/v/production/: ConsoleListener.java  Main.java  NetworkListener.java
task2/: init-stub.sh  launch-base.sh  launch.sh
task2/no-route-issue/: m1.txt  m2.txt  m3.txt  m4.txt  report.txt  s1.txt  s2.txt  s3.txt  s4.txt
task3/: init-stub.sh  launch.sh
