name:                network-gen
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/network-gen#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    Env, EnvGraph, LaunchScript, IfupScript, Output, Gen, EnvLens, Configs
  build-depends:       
      base >= 4.7 && < 5,
      mtl, containers,
      diagrams-lib, diagrams-core, diagrams-contrib, diagrams-svg,
      lens, raw-strings-qq
  default-language:    Haskell2010


